# Agentic-Rag

./: Dockerfile  README.md  docker-compose.yml  practice_cache.py  practice_pydantic.py  practice_redis.py  practice_session.py  pyproject.toml  spam_test.py
app/: main.py
app/core/: config.py  database.py  middleware.py  rate_limit.py  redis_client.py  security.py
app/schemas/: document.py  user.py
app/utils/: cache.py
tests/: test_main.py
